feat: complete auth APIs
