# models/user.go
@@ -1,15 +1,20 @@
 package models
 
 import (
+	"time"
+
 	"golang.org/x/crypto/bcrypt"
-	"gorm.io/gorm"
 )
 
+// User represents a user in the system
 type User struct {
-	gorm.Model
-	Name     string `json:"name"`
-	Email    string `json:"email" gorm:"unique"`
-	Password string `json:"password,omitempty"`
+	ID        uint      `json:"id" gorm:"primarykey" example:"1"`
+	CreatedAt time.Time `json:"created_at" example:"2024-01-01T00:00:00Z"`
+	UpdatedAt time.Time `json:"updated_at" example:"2024-01-01T00:00:00Z"`
+	DeletedAt time.Time `json:"deleted_at,omitempty" gorm:"index" example:"2024-01-01T00:00:00Z"`
+	Name      string    `json:"name" example:"John Doe"`
+	Email     string    `json:"email" gorm:"unique" example:"user@example.com"`
+	Password  string    `json:"password,omitempty" example:"password123"`
 }
 
 func (u *User) HashPassword() error {
